= 0.3.1 / Unreleased
	* VoD rules in `--[un]trusted-ssids` to also use `InterfaceTypeMatch`.

= 0.3.0 / 2014-05-04
	* Documentation updates.
	* Added support for `URLStringProbe`, via `--url-probe`.

= 0.2.1 / 2014-04-19
	* Implement unit testing.
	* Switch to a portable and native uuidgen implementation.
	* Minor documentation improvements.

= 0.2.0 / 2014-04-18
	* Support custom UUID value overrides.
	* Support for security level, i.e. paranoid, high (default), medium.
	* TLS-Auth keyfile now optional.

= 0.1.0 / 2014-03-27
	* Added support for `--ovpnconfigfile`, `--port`, `--proto`.
	* Shorter switches for `--[un]trusted-ssids`.
	* Improved Documentation.

= 0.0.2 / 2014-03-26
	* Require ruby >= 1.9.3.
	* Improved Documentation.

= 0.0.1 / 2014-03-26
	* Initial Release.