@@ -18,3 +18,4 @@ test/version_tmp
 tmp
 .ruby-version
 .ruby-gemset
+.ovpnmcgen.rb.yml
